--- a/index.html
+++ b/index.html
@@ -14,11 +14,320 @@
 		<title>Portfolio Website</title>
 	</head>
 	<body class="font-nunito">
-		<div class="h-[50vh] lg:h-screen bg-gradient-to-t from-indigo-200">
-			<nav class="w-full fixed top-0 bg-white">
-				<div class="container mx-auto">Hello</div>
+		<!-- header = navbar + hero -->
+		<div
+			class="h-[50vh] lg:h-screen bg-gradient-to-t from-indigo-200 relative overflow-hidden"
+		>
+			<!-- navbar -->
+			<nav class="w-full fixed top-0 bg-white z-10">
+				<div class="container mx-auto py-5 flex justify-between items-center">
+					<div class="flex items-center gap-2">
+						<img class="w-16" src="assets/logo.png" alt="logo" />
+						<span class="text-2xl font-bold text-indigo-900">Quota</span>
+					</div>
+					<ul
+						class="hidden md:flex space-x-10 text-gray-600 font-bold text-sm uppercase"
+					>
+						<li class="hover:text-gray-500">
+							<a href="#">homepage</a>
+						</li>
+						<li class="hover:text-gray-500">
+							<a href="#aboutme">about me</a>
+						</li>
+						<li class="hover:text-gray-500">
+							<a href="#services">services</a>
+						</li>
+						<li class="hover:text-gray-500">
+							<a href="#contact">contact</a>
+						</li>
+					</ul>
+
+					<div id="hamburger" class="space-y-1 md:hidden cursor-pointer z-20">
+						<div class="w-6 h-0.5 bg-black"></div>
+						<div class="w-6 h-0.5 bg-black"></div>
+						<div class="w-6 h-0.5 bg-black"></div>
+					</div>
+					<ul
+						id="menu"
+						class="hidden bg-indigo-900 absolute left-0 top-0 w-full p-10 rounded-b-3xl space-y-10 text-white text-center"
+					>
+						<li class="hover:text-gray-500">
+							<a id="hLink" href="#">homepage</a>
+						</li>
+						<li class="hover:text-gray-500">
+							<a id="hLink" href="#aboutme">about me</a>
+						</li>
+						<li class="hover:text-gray-500">
+							<a id="hLink" href="#services">services</a>
+						</li>
+
+						<li class="hover:text-gray-500">
+							<a id="hLink" href="#contact">contact</a>
+						</li>
+					</ul>
+				</div>
 			</nav>
-			<div></div>
+
+			<!-- intro hero -->
+			<div>
+				<img
+					class="absolute bottom-0 right-0 lg:left-0 mx-auto h-5/6 object-cover"
+					src="./assets/man.png"
+					alt="manImg"
+				/>
+				<div
+					class="hidden lg:block absolute -bottom-1/4 right-0 left-0 mx-auto w-big h-big bg-indigo-900 rounded-full -z-10"
+				></div>
+				<div
+					class="absolute top-1/3 left-5 sm:left-10 sm:text-4xl md:left-1/4 md:text-6xl lg:left-5 xl:left-48 xl:text-7xl font-bold"
+				>
+					<span class="text-gray-600">Freelance</span>
+					<p class="text-red-500">Developer</p>
+				</div>
+				<div
+					class="hidden lg:flex flex-col gap-5 rounded-md shadow-lg absolute top-0 bottom-0 m-auto right-10 bg-white p-6 h-fit w-1/3"
+				>
+					<h1 class="text-4xl font-bold text-indigo-900">Hi, I'm Thien</h1>
+					<p class="text-gray-400">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+						voluptates explicabo deleniti libero, vero vitae veniam aspernatur
+						aperiam earum eaque ullam, perspiciatis suscipit culpa quos ut
+						ratione velit odio cupiditate?
+					</p>
+					<a
+						class="bg-indigo-600 text-white text-xl px-3 py-2 rounded-md font-semibold w-fit"
+						href="#contact"
+						>Hire me</a
+					>
+				</div>
+			</div>
 		</div>
+
+		<!-- about me -->
+		<div id="aboutme" class="px-10">
+			<div
+				class="container mx-auto py-40 flex flex-col-reverse lg:flex-row items-center gap-20"
+			>
+				<!-- left side -->
+				<div class="relative">
+					<img
+						class="w-1/4 h-1/4 absolute top-0 left-0 -z-10"
+						src="./assets/dots.png"
+						alt="dots"
+					/>
+					<div class="h-full rounded-full overflow-hidden">
+						<img src="./assets/portrait.png" alt="portrait" />
+					</div>
+				</div>
+
+				<!-- right side -->
+				<div class="my-auto flex flex-col gap-3">
+					<h1 class="text-indigo-600 font-bold">ABOUT ME</h1>
+					<h1 class="text-3xl font-medium">Better Design</h1>
+					<h1 class="text-3xl font-medium">Better Experience</h1>
+					<p class="text-gray-400">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+						sunt aut impedit optio quos. Sed voluptatem architecto temporibus
+						tempora blanditiis dolorem ullam, maxime possimus? Corporis
+						distinctio libero inventore hic commodi.
+					</p>
+					<h2 class="text-gray-400 font-medium">HTML CSS JAVASCRIPT</h2>
+				</div>
+			</div>
+		</div>
+
+		<!-- services -->
+		<div id="services">
+			<div class="container mx-auto">
+				<!-- top -->
+				<div class="flex flex-col gap-3 items-center">
+					<h1 class="text-indigo-600 font-bold">SERVICES</h1>
+					<h1 class="text-3xl">What do I offer?</h1>
+					<p class="w-1/2 text-center text-gray-400">
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni
+						optio deleniti quas provident quis dolor expedita ab ipsa nulla
+						veniam fuga voluptas, reiciendis, dolores accusamus modi laborum est
+						saepe earum.
+					</p>
+				</div>
+
+				<!-- bottom -->
+				<div class="flex flex-wrap p-5 sm:p-0">
+					<!-- card -->
+					<div
+						class="w-full md:w-4/12 shadow-lg rounded-lg p-5 flex flex-col gap-3"
+					>
+						<img class="w-10" src="./assets/icon.png" alt="icon" />
+						<h1 class="font-medium text-lg">UI / UX Design</h1>
+						<p class="text-gray-400">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+							magnam dolorem dolores quia unde explicabo accusamus et, cumque
+							nemo quas ullam eaque omnis necessitatibus veniam debitis
+							doloremque, laboriosam rerum eos!
+						</p>
+						<a class="text-indigo-600 font-semibold text-sm" href="#"
+							>Read More</a
+						>
+					</div>
+
+					<div
+						class="w-full md:w-4/12 shadow-lg rounded-lg p-5 flex flex-col gap-3"
+					>
+						<img class="w-10" src="./assets/icon.png" alt="icon" />
+						<h1 class="font-medium text-lg">UI / UX Design</h1>
+						<p class="text-gray-400">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+							magnam dolorem dolores quia unde explicabo accusamus et, cumque
+							nemo quas ullam eaque omnis necessitatibus veniam debitis
+							doloremque, laboriosam rerum eos!
+						</p>
+						<a class="text-indigo-600 font-semibold text-sm" href="#"
+							>Read More</a
+						>
+					</div>
+
+					<div
+						class="w-full md:w-4/12 shadow-lg rounded-lg p-5 flex flex-col gap-3"
+					>
+						<img class="w-10" src="./assets/icon.png" alt="icon" />
+						<h1 class="font-medium text-lg">UI / UX Design</h1>
+						<p class="text-gray-400">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+							magnam dolorem dolores quia unde explicabo accusamus et, cumque
+							nemo quas ullam eaque omnis necessitatibus veniam debitis
+							doloremque, laboriosam rerum eos!
+						</p>
+						<a class="text-indigo-600 font-semibold text-sm" href="#"
+							>Read More</a
+						>
+					</div>
+
+					<div
+						class="w-full md:w-4/12 shadow-lg rounded-lg p-5 flex flex-col gap-3"
+					>
+						<img class="w-10" src="./assets/icon.png" alt="icon" />
+						<h1 class="font-medium text-lg">UI / UX Design</h1>
+						<p class="text-gray-400">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+							magnam dolorem dolores quia unde explicabo accusamus et, cumque
+							nemo quas ullam eaque omnis necessitatibus veniam debitis
+							doloremque, laboriosam rerum eos!
+						</p>
+						<a class="text-indigo-600 font-semibold text-sm" href="#"
+							>Read More</a
+						>
+					</div>
+
+					<div
+						class="w-full md:w-4/12 shadow-lg rounded-lg p-5 flex flex-col gap-3"
+					>
+						<img class="w-10" src="./assets/icon.png" alt="icon" />
+						<h1 class="font-medium text-lg">UI / UX Design</h1>
+						<p class="text-gray-400">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+							magnam dolorem dolores quia unde explicabo accusamus et, cumque
+							nemo quas ullam eaque omnis necessitatibus veniam debitis
+							doloremque, laboriosam rerum eos!
+						</p>
+						<a class="text-indigo-600 font-semibold text-sm" href="#"
+							>Read More</a
+						>
+					</div>
+
+					<div
+						class="w-full md:w-4/12 shadow-lg rounded-lg p-5 flex flex-col gap-3"
+					>
+						<img class="w-10" src="./assets/icon.png" alt="icon" />
+						<h1 class="font-medium text-lg">UI / UX Design</h1>
+						<p class="text-gray-400">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+							magnam dolorem dolores quia unde explicabo accusamus et, cumque
+							nemo quas ullam eaque omnis necessitatibus veniam debitis
+							doloremque, laboriosam rerum eos!
+						</p>
+						<a class="text-indigo-600 font-semibold text-sm" href="#"
+							>Read More</a
+						>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- contact -->
+		<div id="contact" class="mt-10">
+			<div class="container mx-auto">
+				<!-- top -->
+				<div class="flex flex-col gap-3 items-center">
+					<h1 class="text-indigo-600 font-bold">CONTACT</h1>
+					<h1 class="text-3xl">Have Questions?</h1>
+					<p class="w-1/2 text-center text-gray-400">
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni
+						optio deleniti quas provident quis dolor.
+					</p>
+				</div>
+
+				<!-- bottom -->
+				<form class="mt-5 p-8 flex flex-col gap-5 items-center">
+					<input
+						class="md:w-1/2 p-2 w-full ring-1 ring-indigo-300 rounded-sm"
+						type="text"
+						placeholder="Name"
+					/>
+					<input
+						class="md:w-1/2 p-2 w-full ring-1 ring-indigo-300 rounded-sm"
+						type="email"
+						placeholder="Email"
+					/>
+					<textarea
+						class="md:w-1/2 p-2 w-full ring-1 ring-indigo-300 rounded-sm"
+						cols="30"
+						rows="10"
+						placeholder="Message.."
+					></textarea>
+					<button
+						class="w-1/2 bg-indigo-600 text-white font-medium px-3 py-2 rounded-md cursor-pointer"
+					>
+						Submit
+					</button>
+				</form>
+			</div>
+		</div>
+
+		<!-- footer -->
+		<div class="w-full bg-gray-800">
+			<div class="container mx-auto py-5 flex justify-between items-center">
+				<div class="flex items-center gap-2">
+					<img class="w-16" src="assets/logo.png" alt="logo" />
+					<span class="text-2xl font-bold text-white">Quota</span>
+				</div>
+				<span class="hidden md:block font-medium text-white"
+					>@2022 Quota. Design by Thien Nguyen.</span
+				>
+				<div class="flex gap-2">
+					<img
+						class="w-4 cursor-pointer"
+						src="./assets/facebook.png"
+						alt="facebook"
+					/>
+					<img
+						class="w-4 cursor-pointer"
+						src="./assets/instagram.png"
+						alt="instagram"
+					/>
+					<img
+						class="w-4 cursor-pointer"
+						src="./assets/twitter.png"
+						alt="twitter"
+					/>
+					<img
+						class="w-4 cursor-pointer"
+						src="./assets/linkedin.png"
+						alt="linkedin"
+					/>
+				</div>
+			</div>
+		</div>
+
+		<script src="./app.js"></script>
 	</body>
 </html>
